@@ -3,6 +3,7 @@ Version 1.3.1
 -------------
 
 - fixed assertion failure when viewing source files in builtin viewer
+- fixed wrong escaping of backslashes in X-Poedit-* headers
  
 
 Version 1.3.0
